# TimelapseSensor

./: CMakeLists.txt  README.md  prj.conf
boards/: xiao_ble.overlay
drivers/: CMakeLists.txt  Kconfig  max30102_driver_i2c.c  max30102_driver_i2c.h
drivers/dts/bindings/: maxim,max301021.yaml
src/: GenericCentralApp.c  GenericCentralApp.h  iir_filter.c  iir_filter.h  main.c  scs.h  scs_client.c  scs_client.h
